# ESP32

./: .gitignore  README.md  README_zh.md  Song1 copy.mid  music.py  output.mid
Remote_TX/: CMakeLists.txt  sdkconfig  sdkconfig.old
Remote_TX/main/: CMakeLists.txt  idf_component.yml  include.h  (+1 more)
cat_food_machine/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
cat_food_machine/main/: CMakeLists.txt  idf_component.yml  include.h  main.c
cat_food_machine/main/device/inc/: gt911.h  sntp_time.h  st7789.h  user_lvgl.h  wifi_app.h
cat_food_machine/main/device/src/: gt911.c  sntp_time.c  st7789.c  user_lvgl.c  wifi_app.c
cat_food_machine/main/driver/inc/: feeder_motor.h  feeding_schedule.h  tusb_serial.h
cat_food_machine/main/driver/src/: feeder_motor.c  feeding_schedule.c  tusb_serial.c
cat_food_machine/main/ui/inc/: feeding_page.h  main_page.h  setting_page.h  ui.h  wifi_config_page.h
cat_food_machine/main/ui/src/: app_page.c  feeding_page.c  main_page.c  setting_page.c  ui.c  wifi_config_page.c
code/: config.py  main.py
code2/: datapacket.py  main copy.py  main.py  musicxml_parser.py  obj_get_demo.py  obj_search_demo.py  robot.py
example/LVGL/main/: CMakeLists.txt  idf_component.yml  lvgl_example_main.c
example/LVGL/main/device/inc/: gt911.h  st7789.h  user_lvgl.h
example/LVGL/main/device/src/: gt911.c  st7789.c  user_lvgl.c
example/LVGL/main/driver/inc/: gt911.h  st7789.h  user_lvgl.h
example/LVGL/main/driver/src/: gt911.c  st7789.c  tusb_serial.c
example/LVGL/main/ui/inc/: app_page.h  main_page.h  ui.h
example/LVGL/main/ui/src/: app_page.c  main_page.c  ui.c
example/car/main/: CMakeLists.txt  include.h
example/car/main/Algorithm/inc/: Balance_Car.h  imu_fusion.h  pid.h
example/car/main/Algorithm/src/: Mecanum.c  imu_fusion.c  pid.c
example/car/main/Command/inc/: command.h
example/car/main/device/inc/: gt911.h  icm42688.h  imu_hal.h  lsm6dsm.h  motor.h  st7789.h  user_lvgl.h
example/car/main/device/src/: buzzer.c  gt911.c  icm42688.c  imu_hal.c  mpu6050.c  st7789.c
example/car/main/driver/inc/: espnow.h  gpio_out.h  nvs.h  ota_usb.h  tusb_serial.h
example/car/main/driver/src/: espnow.c  ota_usb.c  pwm.c
example/car/main/font/: gcxl_large_font_80.c
example/car/main/ui/inc/: app_page.h  car_control_page.h  cmd_page.h  imu_setting_page.h  keyboard.h  mecanum_page.h  motor_debug.h  motor_page.h  num_show_page.h  ota_page.h  pid_page.h  setting_page.h
example/car/main/ui/src/: car_control_page.c  cmd_page.c  imu_setting_page.c  main_page.c  mecanum_page.c  motor_debug.c  motor_page.c  num_show_page.c  openmv_logo.c  pid_page.c  setting_page.c  singtown_logo.c  ui.c
openmv_code/: 1.py  4.py  5.py  P1.py  P1.xml  P2.py  P2.xml  TKZZ.xml  config.py  far memory.xml  luxiaoyu.xml  main.py  main1.py  main2.py  test.py
(+70 files in other folders)
